@@ -198,9 +198,6 @@ public class AvroCoderTest {
     Object cloned1 = CoderUtils.clone(avroCoder1, pojo1);
     Object cloned2 = CoderUtils.clone(avroCoder2, pojo2);
 
-    Class<?> class1 = cloned1.getClass();
-    Class<?> class2 = cloned2.getClass();
-
     // Confirming that the uncorrupted coder is fine
     pojoClass1.cast(cloned1);
 
@@ -331,7 +328,7 @@ public class AvroCoderTest {
     Assert.assertEquals(before, after);
 
     Integer intAfter = intCoder.decode(inStream, context);
-    Assert.assertEquals(new Integer(10), intAfter);
+    Assert.assertEquals(Integer.valueOf(10), intAfter);
   }
 
   @Test
@@ -442,6 +439,7 @@ public class AvroCoderTest {
     @SuppressWarnings("unused")
     private UnorderedMapClass[] arrayField;
   }
+
   @Test
   public void testDeterministicNonDeterministicArray() {
     assertNonDeterministic(AvroCoder.of(NonDeterministicArray.class),
@@ -714,7 +712,9 @@ public class AvroCoderTest {
 
   @Union({ UnionCase1.class, UnionCase2.class, UnionCase3.class })
   private abstract static class NonDeterministicUnionBase {}
+
   private static class UnionCase1 extends DeterministicUnionBase {}
+
   private static class UnionCase2 extends DeterministicUnionBase {
     @SuppressWarnings("unused")
     String field;
@@ -903,6 +903,7 @@ public class AvroCoderTest {
     @SuppressWarnings("unused")
     private T foo;
   }
+
   private static class Foo {
     @SuppressWarnings("unused")
     String id;
